@@ -1801,14 +1801,22 @@ aopOp (operand * op, iCode * ic, bool result)
       /* else spill location  */
       if (sym->usl.spillLoc)
         {
+          asmop *oldAsmOp = NULL;
+
           if (sym->usl.spillLoc->aop
               && sym->usl.spillLoc->aop->size != getSize (sym->type))
             {
 	      /* force a new aop if sizes differ */
+              oldAsmOp = sym->usl.spillLoc->aop;
 	      sym->usl.spillLoc->aop = NULL;
 	      //printf ("forcing new aop\n");
             }
 	  sym->aop = op->aop = aop = aopForSym (ic, sym->usl.spillLoc, result);
+          if (sym->usl.spillLoc->aop->size != getSize (sym->type))
+            {
+              /* Don't reuse the new aop, go with the last one */
+              sym->usl.spillLoc->aop = oldAsmOp;
+            }
 	  aop->size = getSize (sym->type);
 	  aop->op = op;
 	  aop->isaddr = op->isaddr;
